# dropbox-lite

./: .gitignore  BENCHMARKS.md  CMakeLists.txt  README.md
benchmarks/: CMakeLists.txt  bench_chunking.cpp  bench_dedup.cpp  bench_delta_sync.cpp
include/common/: chunker.h  compression.h  error.h  hash.h  logger.h  metrics.h  rate_limiter.h  thread_pool.h
include/core/: conflict_resolver.h  delta_engine.h  metadata_db.h
include/server/: storage_manager.h  sync_service.h
proto/: sync.proto
scripts/: build.sh  demo.sh  run_benchmarks.sh
src/common/: chunker.cpp  compression.cpp  hash.cpp  logger.cpp  metrics.cpp  rate_limiter.cpp  thread_pool.cpp
src/core/: conflict_resolver.cpp  delta_engine.cpp  metadata_db.cpp
src/server/: main.cpp  storage_manager.cpp  sync_service.cpp
tests/: CMakeLists.txt  test_chunker.cpp  test_hash.cpp  test_rate_limiter.cpp  test_thread_pool.cpp
